tests/errors/intrinsics10.f90
program intrinsics10
    integer(4) :: x = 1
    integer(8) :: y = 2
    print *, ieor(x, y)
end program